# postgwas

./: .gitignore  Dockerfile  Dockerfile_working  LICENSE  README.md  data_resourse_preparation.sh  environment.yml  installation_comans.sh  pyproject.toml  resourse_file_specifications.md
resource_file_preparation/: pops_input.py
src/postgwas/: __main__.py  __main__.py_back  _mp_fix.py  cli.py
src/postgwas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/postgwas/annot_ldblock/: __init__.py  annot_ldblock.py  cli.py  cli_withpipeline.py  workflows.py
src/postgwas/clis/: common_cli.py
src/postgwas/config/: __init__.py
src/postgwas/finemap/: cli.py  cli_back.py  cli_withpipeline.py  main.py  original_susie.r  run_susie_parallel_cli.R  susie copy.r  susie.r  utlities.r  workflows.py
src/postgwas/flames/: FLAMES.py  FLAMES_scoring.py  Original_cli.py  annotate.py  cli.py  cli_withpipelines.py  main.py  need_to_delete_main.py  workflows.py
src/postgwas/formatter/: cli.py  cli_withpipeline.py  main.py  to_finemap.py  to_ldpred.py  to_ldsc.py  to_magma.py  workflows.py
src/postgwas/gene_assoc/: cli.py  cli_back.py  cli_withpipeline.py  magma_main.py  original_magma_main.py  workflows.py
src/postgwas/h2_rg/: cli.py  cli_withpipeline.py  ldsc_runner.py  ldsc_runner_back.py  ldsc_runner_original.py  workflows.py
src/postgwas/harmonisation/: add_or_calculate_info.py  add_or_fix_snp_column.py  back_cli.py  beta_and_se_from_z.py  beta_or_or.py  calculate_z_from_beta_se.py  (+23 more)
tests/: example_input_file.csv  example_input_file.json  harmonisation.yaml  pipeline_test.sh  postgwas_demo.sh  test_run.sh  test_run2.sh  test_run_with_imputed.sh
(+65 files in other folders)
