[project]
name = "postgwas"
version = "0.1.0"
description = "Post-GWAS analysis toolkit"
authors = [{ name = "Jibin John" }]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
postgwas = "postgwas.__main__:main"
