[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgwas"
version = "1.0.0"
description = "Your package description"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.8"
dependencies = [
    # List runtime dependencies here, e.g., "numpy>=1.20"
]

[project.scripts]
postgwas = "postgwas.main:cli"  # Adjust to point to your console entry point function
